<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/album_name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="22sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/album_description"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="22sp"
                    tools:ignore="TextFields" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerGenre"
                    android:padding="20dp"
                    android:hint="@string/album_genre"
                    android:textSize="22sp" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerRecord"
                    android:padding="20dp"
                    android:textSize="22sp" />

                <!-- Campo para seleccionar la fecha de lanzamiento -->
                <EditText
                    android:id="@+id/editTextFechaLanzamiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/album_release"
                    android:inputType="none"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="22sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/editTextCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/album_cover"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_dark"
                    android:textSize="22sp"
                    tools:ignore="TextFields" />

                <ImageView
                    android:id="@+id/saveAlbum"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/save_album"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/content_save"
                    android:state_checked="true"
                    app:strokeWidth="0dp"
                    app:tint="@color/gray" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
