<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title=""
        android:icon="@drawable/account"
        android:id="@+id/musicianFragment"/>
    <item android:title=""
        android:icon="@drawable/spa_outline"
        android:id="@+id/collectorFragment"/>
    <item android:title=""
        android:icon="@drawable/playlist_music"
        android:id="@+id/albumFragment"/>
</menu>


