<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.MusicianFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="101dp"
            android:layout_height="41dp"
            android:layout_gravity="left"
            android:text="@string/title_musicians"
            android:textColor="@color/gray"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/musiciansRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/musician_item" />

    </LinearLayout>
</FrameLayout>